--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.weicoder</groupId>
-		<artifactId>basic</artifactId> 
+		<artifactId>weicoder</artifactId> 
 		<version>3.3.8</version> 
 	</parent>
 	<modelVersion>4.0.0</modelVersion> 
