--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -18,5 +18,9 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>hibernate</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 </project>
