--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.5</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.3.8</version>
+	<version>3.3.9</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -104,6 +104,31 @@
 		<module>oauth</module>
 		<module>pay</module>
 	</modules>
+
+	<profiles>
+		<profile>
+			<id>jdk8</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>${maven-compiler-plugin}</version>
+						<configuration>
+							<compilerArgument>-parameters</compilerArgument>
+							<source>1.8</source>
+							<target>1.8</target>
+							<encoding>${encoding}</encoding>
+							<skip>true</skip>
+							<excludes> 
+								<exclude>**/*Jdk11*.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<dependencies>
 		<dependency>
