--- a/pay/pom.xml
+++ b/pay/pom.xml
@@ -18,5 +18,9 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>xml</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId> 
+		</dependency> 
 	</dependencies>
 </project>
