--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
 		<quartz>2.3.2</quartz>
 		<mina-core>2.1.3</mina-core>
 		<disruptor>3.4.2</disruptor>
+		<struts2>2.5.2</struts2>
+		<xwork-core>2.3.37</xwork-core>
+		<spring>5.2.6.RELEASE</spring>
+		<hibernate-search>5.11.5.Final</hibernate-search>
 		<commons-compress>1.20</commons-compress>
 		<commons-email>1.5</commons-email>
 		<jdom2>2.0.6</jdom2>
@@ -60,98 +64,39 @@
 		<module>common</module>
 		<module>cache</module>
 		<module>csv</module>
-		<module>dao</module>
-		<module>database</module>
-		<module>datasource</module>
-		<module>dbcp2</module>
-		<module>druid</module>
+		<module>dao</module>  
 		<module>elasticsearch</module>
 		<module>email</module>
-		<module>excel</module>
-		<module>gson</module>
+		<module>excel</module> 
 		<module>hbase</module>
 		<module>hibernate</module>
 		<module>httpclient4</module>
 		<module>httpclient5</module>
-		<module>jdbc</module>
+		<module>image</module> 
 		<module>json</module>
 		<module>kafka</module>
 		<module>log4j</module>
 		<module>memcache</module>
-		<module>mongo</module>
-		<module>mina</module>
-		<module>nacos</module>
-		<module>netty3</module>
+		<module>mongo</module> 
+		<module>nacos</module> 
 		<module>protobuf</module>
 		<module>quartz</module>
-		<module>redis</module>
-		<module>lettuce</module>
-		<module>redisson</module>
+		<module>redis</module> 
 		<module>rpc</module>
-		<module>socket</module>
-		<module>sofa</module>
+		<module>socket</module> 
 		<module>solr</module>
 		<module>tomcat</module>
 		<module>web</module>
-		<module>websocket</module>
-		<module>jdom2</module>
-		<module>xml</module>
-		<module>xmlbean</module>
+		<module>websocket</module> 
+		<module>xml</module> 
 		<module>yaml</module>
 		<module>zookeeper</module>
-		<module>zip</module>
+		<module>zip</module> 
 		<module>admin</module>
 		<module>oauth</module>
 		<module>pay</module>
 	</modules>
-
-	<profiles>
-		<profile>
-			<id>jdk8</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId> 
-						<configuration>
-							<compilerArgument>-parameters</compilerArgument>
-							<source>1.8</source>
-							<target>1.8</target>
-							<encoding>${encoding}</encoding>
-							<skip>true</skip>
-							<excludes> 
-								<exclude>**/*Jdk11*.java</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>android</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId> 
-						<configuration>
-							<compilerArgument>-parameters</compilerArgument>
-							<source>1.8</source>
-							<target>1.8</target>
-							<encoding>${encoding}</encoding>
-							<skip>true</skip>
-							<excludes> 
-								<exclude>**/*Jdk11*.java</exclude>
-								<exclude>**/*Image*.java</exclude>
-								<exclude>**/*VerifyCode*.java</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
+  
 	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
@@ -181,27 +126,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>dao</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>database</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>datasource</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>dbcp2</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>druid</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency>  
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>elasticsearch</artifactId>
@@ -216,12 +141,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>excel</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>gson</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>hbase</artifactId>
@@ -241,10 +161,10 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>httpclient5</artifactId>
 				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
-				<artifactId>jdbc</artifactId>
+				<artifactId>image</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -271,22 +191,12 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>mongo</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>mina</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>nacos</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>netty3</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>protobuf</artifactId>
@@ -301,17 +211,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>redis</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>lettuce</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>redisson</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency>  
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>rpc</artifactId>
@@ -321,12 +221,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>socket</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>sofa</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>solr</artifactId>
@@ -351,17 +246,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>xml</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>jdom2</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>xmlbean</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+			</dependency>  
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>yaml</artifactId>
@@ -376,7 +261,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>zip</artifactId>
 				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>admin</artifactId>
@@ -631,7 +516,7 @@
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>${lombok}</version>
-			</dependency>
+			</dependency> 
 		</dependencies>
 	</dependencyManagement>
 </project>
