--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -31,5 +31,15 @@
 			<artifactId>dao</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
