--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -18,5 +18,15 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
