--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -21,7 +21,8 @@
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom2</artifactId>
-		</dependency>
+			<optional>true</optional>
+		</dependency> 
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
