--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -9,7 +9,7 @@ email.parse=java
 nacos.addr=192.168.199.196:8848
 
 #\u65e5\u5fd7
-log.dir=/data/logs/test
+log.dir=/home/wdcode/logs/test
 log.level=debug
 log.test=true
 
