--- a/test/pom.xml
+++ b/test/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>hibernate</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>httpclient5</artifactId>
@@ -97,14 +97,14 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>log4j</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>yaml</artifactId>
-		</dependency>  
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId> 
+			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
@@ -161,6 +161,11 @@
 			<groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
 			<version>1.82.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>2.3.0.RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
