--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -6,6 +6,8 @@ email.password=olipgpxvkshcbgji
 email.host=smtp.qq.com
 email.parse=java
 
+base.url=http://m.weicoder.com/
+
 nacos.addr=192.168.199.196:8848
 
 #\u65e5\u5fd7
