--- a/pom.xml
+++ b/pom.xml
@@ -5,44 +5,45 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.6</version>
+		<version>1.7</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.4.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.13.3</log4j-core>
-		<lombok>1.18.12</lombok>
-		<fastjson>1.2.68</fastjson>
-		<hibernate-core>5.4.16.Final</hibernate-core>
+		<log4j-core>2.13.3</log4j-core> 
+		<fastjson>1.2.71</fastjson>
+		<hibernate-core>5.4.17.Final</hibernate-core>
 		<mysql-connector-java>8.0.20</mysql-connector-java>
 		<netty-all>4.1.50.Final</netty-all>
-		<mongo-java-driver>3.12.4</mongo-java-driver>
+		<mongo-java-driver>3.12.5</mongo-java-driver>
 		<jedis>3.3.0</jedis>
 		<kafka-clients>2.5.0</kafka-clients>
-		<sofa-rpc>5.7.1</sofa-rpc> 
+		<sofa-rpc>5.7.3</sofa-rpc>
 		<guava>29.0-jre</guava>
-		<elasticsearch>7.7.0</elasticsearch>
+		<elasticsearch>7.8.0</elasticsearch>
 		<poi>4.1.2</poi>
-		<tomcat-embed>9.0.35</tomcat-embed>
-		<nacos-client>1.2.1</nacos-client>
-		<protobuf-java>3.12.1</protobuf-java>
-		<httpclient5>5.0</httpclient5>
+		<tomcat-embed>9.0.36</tomcat-embed>
+		<nacos-client>1.3.0</nacos-client>
+		<protobuf-java>3.12.2</protobuf-java>
+		<httpclient5>5.0.1</httpclient5>
+		<okhttp>4.7.2</okhttp>
+		<retrofit>2.9.0</retrofit>
 		<HikariCP>3.4.5</HikariCP>
-		<solr-solrj>8.5.1</solr-solrj> 
+		<solr-solrj>8.5.2</solr-solrj>
 		<snakeyaml>1.26</snakeyaml>
 		<opencsv>5.2</opencsv>
 		<xstream>1.4.12</xstream>
 		<dom4j>2.1.3</dom4j>
-		<curator-framework>4.3.0</curator-framework>  
+		<curator-framework>5.0.0</curator-framework>
 		<asynchbase>1.8.2</asynchbase>
-		<hbase-client>2.2.4</hbase-client>  
-		<quartz>2.3.2</quartz> 
+		<hbase-client>2.2.5</hbase-client>
+		<quartz>2.3.2</quartz>
 		<disruptor>3.4.2</disruptor>
 		<commons-compress>1.20</commons-compress>
 		<commons-email>1.5</commons-email>
-		<jdom2>2.0.6</jdom2> 
+		<jdom2>2.0.6</jdom2>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
 	</properties>
 
@@ -50,47 +51,39 @@
 		<module>common</module>
 		<module>cache</module>
 		<module>csv</module>
-		<module>dao</module>  
-		<module>jdbc</module>  
+		<module>dao</module>
+		<module>jdbc</module>
 		<module>elasticsearch</module>
 		<module>email</module>
-		<module>excel</module> 
+		<module>excel</module>
 		<module>hbase</module>
-		<module>hibernate</module> 
+		<module>hibernate</module>
 		<module>httpclient5</module>
-		<module>image</module> 
+		<module>okhttp</module>
+		<module>http</module>
+		<module>image</module>
 		<module>json</module>
 		<module>kafka</module>
 		<module>log4j</module>
 		<module>memcache</module>
-		<module>mongo</module> 
-		<module>nacos</module> 
+		<module>mongo</module>
+		<module>nacos</module>
 		<module>protobuf</module>
 		<module>quartz</module>
-		<module>redis</module> 
+		<module>redis</module>
 		<module>rpc</module>
-		<module>socket</module> 
+		<module>socket</module>
 		<module>solr</module>
 		<module>tomcat</module>
 		<module>web</module>
-		<module>websocket</module> 
-		<module>xml</module> 
+		<module>websocket</module>
+		<module>xml</module>
 		<module>yaml</module>
 		<module>zookeeper</module>
-		<module>zip</module> 
+		<module>zip</module>
 		<module>admin</module>
-		<module>oauth</module>
-		<module>pay</module>
 	</modules>
-  
-	<dependencies>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
-
+ 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -112,12 +105,12 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>dao</artifactId>
 				<version>${project.version}</version>
-			</dependency>  
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>jdbc</artifactId>
 				<version>${project.version}</version>
-			</dependency>  
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>elasticsearch</artifactId>
@@ -132,7 +125,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>excel</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>hbase</artifactId>
@@ -142,12 +135,22 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>hibernate</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>httpclient5</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>http</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>image</artifactId>
@@ -177,12 +180,12 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>mongo</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>nacos</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>protobuf</artifactId>
@@ -197,7 +200,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>redis</artifactId>
 				<version>${project.version}</version>
-			</dependency>  
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>rpc</artifactId>
@@ -207,7 +210,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>socket</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>solr</artifactId>
@@ -232,7 +235,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>xml</artifactId>
 				<version>${project.version}</version>
-			</dependency>  
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>yaml</artifactId>
@@ -247,20 +250,10 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>zip</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>admin</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>oauth</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>pay</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -277,7 +270,7 @@
 				<groupId>com.google.protobuf</groupId>
 				<artifactId>protobuf-java</artifactId>
 				<version>${protobuf-java}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
@@ -292,7 +285,7 @@
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongo-java-driver</artifactId>
 				<version>${mongo-java-driver}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.whalin</groupId>
 				<artifactId>Memcached-Java-Client</artifactId>
@@ -322,11 +315,21 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents.client5</groupId>
 				<artifactId>httpclient5</artifactId>
 				<version>${httpclient5}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.okhttp3</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>${okhttp}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.retrofit2</groupId>
+				<artifactId>retrofit</artifactId>
+				<version>${retrofit}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -367,7 +370,7 @@
 				<groupId>com.zaxxer</groupId>
 				<artifactId>HikariCP</artifactId>
 				<version>${HikariCP}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
@@ -437,11 +440,6 @@
 				<groupId>org.apache.curator</groupId>
 				<artifactId>curator-recipes</artifactId>
 				<version>${curator-framework}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>${lombok}</version>
 			</dependency> 
 		</dependencies>
 	</dependencyManagement>
