--- a/http/pom.xml
+++ b/http/pom.xml
@@ -9,14 +9,14 @@
 	</parent>
 	<artifactId>http</artifactId>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>okhttp</artifactId>
-		</dependency>
+	<dependencies> 
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>json</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
