--- a/test/pom.xml
+++ b/test/pom.xml
@@ -24,7 +24,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>hibernate</artifactId>
+			<artifactId>dao</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
@@ -100,7 +100,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>hibernate</artifactId>
+			<artifactId>dao</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
