--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,17 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.13.3</log4j-core> 
+		<log4j-core>2.13.3</log4j-core>
 		<fastjson>1.2.71</fastjson>
 		<hibernate-core>5.4.17.Final</hibernate-core>
 		<mysql-connector-java>8.0.20</mysql-connector-java>
 		<netty-all>4.1.50.Final</netty-all>
 		<mongo-java-driver>3.12.5</mongo-java-driver>
+		<influxdb-java>2.19</influxdb-java>
+		<flink-java>1.11.1</flink-java>
+		<spark-core>2.4.6</spark-core>
 		<jedis>3.3.0</jedis>
+		<seata>1.3.0</seata>
 		<kafka-clients>2.5.0</kafka-clients>
 		<sofa-rpc>5.7.3</sofa-rpc>
 		<guava>29.0-jre</guava>
@@ -26,6 +30,7 @@
 		<poi>4.1.2</poi>
 		<tomcat-embed>9.0.36</tomcat-embed>
 		<nacos-client>1.3.0</nacos-client>
+		<hadoop-client>3.3.0</hadoop-client>
 		<protobuf-java>3.12.2</protobuf-java>
 		<httpclient5>5.0.1</httpclient5>
 		<okhttp>4.7.2</okhttp>
@@ -36,12 +41,12 @@
 		<opencsv>5.2</opencsv>
 		<xstream>1.4.12</xstream>
 		<dom4j>2.1.3</dom4j>
-		<curator-framework>5.0.0</curator-framework> 
+		<curator-framework>5.0.0</curator-framework>
 		<hbase-client>2.2.5</hbase-client>
 		<quartz>2.3.2</quartz>
 		<disruptor>3.4.2</disruptor>
 		<commons-compress>1.20</commons-compress>
-		<commons-email>1.5</commons-email> 
+		<commons-email>1.5</commons-email>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
 	</properties>
 
@@ -49,26 +54,26 @@
 		<module>common</module>
 		<module>cache</module>
 		<module>csv</module>
-		<module>dao</module> 
+		<module>dao</module>
 		<module>elasticsearch</module>
 		<module>email</module>
 		<module>excel</module>
-		<module>hbase</module> 
-		<module>httpclient5</module> 
+		<module>hbase</module>
+		<module>httpclient5</module>
 		<module>http</module>
 		<module>image</module>
 		<module>json</module>
 		<module>kafka</module>
 		<module>log4j</module>
 		<module>memcache</module>
-		<module>mongo</module>
+		<module>mongo</module> 
 		<module>nacos</module>
 		<module>protobuf</module>
 		<module>quartz</module>
 		<module>redis</module>
 		<module>rpc</module>
-		<module>socket</module>
-		<module>solr</module>
+		<module>socket</module> 
+		<module>solr</module> 
 		<module>tomcat</module>
 		<module>web</module>
 		<module>websocket</module>
@@ -77,8 +82,15 @@
 		<module>zookeeper</module>
 		<module>zip</module>
 		<module>admin</module>
+		<module>hadoop</module>
+		<module>influxdb</module>
+		<!--  
+		<module>spark</module>
+		<module>flink</module>
+		<module>seata</module> 
+		 -->
 	</modules>
- 
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -100,7 +112,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>dao</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>elasticsearch</artifactId>
@@ -120,12 +132,12 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>hbase</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>httpclient5</artifactId>
 				<version>${project.version}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>http</artifactId>
@@ -175,7 +187,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>quartz</artifactId>
 				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>redis</artifactId>
@@ -195,7 +207,7 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>solr</artifactId>
 				<version>${project.version}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>tomcat</artifactId>
@@ -237,6 +249,31 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>seata</artifactId>
+				<version>${project.version}</version>
+			</dependency> 
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>influxdb</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>hadoop</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>spark</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>flink</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava}</version>
@@ -260,6 +297,11 @@
 				<groupId>com.alibaba.nacos</groupId>
 				<artifactId>nacos-client</artifactId>
 				<version>${nacos-client}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-client</artifactId>
+				<version>${hadoop-client}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mongodb</groupId>
@@ -320,7 +362,7 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-hikaricp</artifactId>
 				<version>${hibernate-core}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.apache.hbase</groupId>
 				<artifactId>hbase-client</artifactId>
@@ -385,7 +427,7 @@
 				<groupId>org.dom4j</groupId>
 				<artifactId>dom4j</artifactId>
 				<version>${dom4j}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
@@ -410,7 +452,27 @@
 				<groupId>org.apache.curator</groupId>
 				<artifactId>curator-recipes</artifactId>
 				<version>${curator-framework}</version>
-			</dependency> 
+			</dependency>
+			<dependency>
+				<groupId>org.influxdb</groupId>
+				<artifactId>influxdb-java</artifactId>
+				<version>${influxdb-java}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.flink</groupId>
+				<artifactId>flink-streaming-java_2.12</artifactId>
+				<version>${flink-java}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.spark</groupId>
+				<artifactId>spark-core_2.12</artifactId>
+				<version>${spark-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.seata</groupId>
+				<artifactId>seata-all</artifactId>
+				<version>${seata}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
