--- a/ssh/pom.xml
+++ b/ssh/pom.xml
@@ -1,45 +1,66 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.4.2</version> 
+		<version>3.4.2</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion> 
-	<artifactId>ssh</artifactId> 
- 
-	<dependencies> 
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>ssh</artifactId>
+
+	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>common</artifactId> 
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>email</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>json</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>socket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>image</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>  
+			<artifactId>struts2-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>  
-		</dependency>   
+			<artifactId>spring-orm</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>  
-		</dependency> 
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>  
-		</dependency> 
+			<artifactId>spring-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>  
-		</dependency> 
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search</artifactId>  
+			<artifactId>hibernate-search</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>  
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+		</dependency> 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId> 
 		</dependency>
-	</dependencies> 
+	</dependencies>
 </project>
