--- a/seata/pom.xml
+++ b/seata/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.4.3</version>
+		<version>3.4.5</version>
 	</parent>
 	<artifactId>seata</artifactId>
 
@@ -13,6 +13,10 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>log4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>jdbc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.seata</groupId>
@@ -33,10 +37,6 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
+		</dependency> 
 	</dependencies>
 </project>
