--- a/json/pom.xml
+++ b/json/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.4.5-jdk8</version>
+		<version>3.4.6</version>
 	</parent>
 	<artifactId>json</artifactId>
 
