--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.8</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.4.5-jdk8</version>
+	<version>3.4.6</version>
 	<packaging>pom</packaging>
 
 	<properties>
