--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.4.5-jdk8</version>
+		<version>3.4.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>web</artifactId>
