--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,33 @@
 		<commons-compress>1.20</commons-compress> 
 		<xstream>1.4.12</xstream>
 		<dom4j>2.1.3</dom4j> 
-		<commons-pool2>2.8.1</commons-pool2> 
-		<disruptor>3.4.2</disruptor>
+		<commons-pool2>2.8.1</commons-pool2>
 		<!-- 
+		<disruptor>3.4.2</disruptor>
 		<quartz>2.3.2</quartz> 
 		<commons-email>1.5</commons-email>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
+		
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>${disruptor}</version>
+		</dependency>
+           <dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz}</version>
+		</dependency>
+           <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>${commons-email}</version>
+		</dependency>
+           <dependency>
+			<groupId>com.whalin</groupId>
+			<artifactId>Memcached-Java-Client</artifactId>
+			<version>${Memcached-Java-Client}</version>
+		</dependency>
 		 -->
 	</properties>
 
@@ -317,12 +338,7 @@
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j-core}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.lmax</groupId>
-				<artifactId>disruptor</artifactId>
-				<version>${disruptor}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka-clients</artifactId>
