--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<properties>
 		<log4j-core>2.17.2</log4j-core>
 		<fastjson>1.2.80</fastjson>
-		<hibernate-core>5.6.7.Final</hibernate-core> <!-- 6.0.0.Final -->
+		<hibernate-core>5.6.8.Final</hibernate-core>
+		<hibernate-envers>6.0.0.Final</hibernate-envers>
 		<mysql-connector-java>8.0.28</mysql-connector-java>
 		<netty-all>4.1.76.Final</netty-all>
 		<mongo-java-driver>3.12.10</mongo-java-driver>
@@ -49,15 +50,21 @@
 		<xstream>1.4.19</xstream> 
 		 
 		<!--   
-		<dom4j>2.1.3</dom4j> jaxen:jaxen:1.2.0
+		<dom4j>2.1.3</dom4j>
+		<jaxen>1.2.0</jaxen>
 		<quartz>2.3.2</quartz>
 		<commons-email>1.5</commons-email>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client> 
 		<dependency>
-				<groupId>org.dom4j</groupId>
-				<artifactId>dom4j</artifactId>
-				<version>${dom4j}</version>
-			</dependency>
+			<groupId>org.dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>${dom4j}</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>${jaxen}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
@@ -366,6 +373,11 @@
 				<groupId>io.github.zawn.retrofit2</groupId>
 				<artifactId>retrofit</artifactId>
 				<version>${retrofit}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate.orm</groupId>
+				<artifactId>hibernate-envers</artifactId>
+				<version>${hibernate-envers}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
