--- a/json/pom.xml
+++ b/json/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.5.0</version>
+		<version>3.5.1</version>
 	</parent>
 	<artifactId>json</artifactId>
 
@@ -17,6 +17,10 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.fastjson2</groupId>
+			<artifactId>fastjson2</artifactId> 
 		</dependency>
 	</dependencies>
 </project>
