--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,16 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>2.0</version>
+		<version>2.1</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.5.0</version>
+	<version>3.5.1</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<log4j-core>2.17.2</log4j-core>
 		<fastjson>1.2.80</fastjson>
+		<fastjson2>2.0.1</fastjson2>
 		<hibernate-core>5.6.8.Final</hibernate-core>
 		<hibernate-envers>6.0.0.Final</hibernate-envers>
 		<mysql-connector-java>8.0.28</mysql-connector-java>
@@ -42,11 +43,11 @@
 		<druid>1.2.9</druid>
 		<shiro>1.9.0</shiro>
 		<curator-framework>5.2.1</curator-framework>
-		<hbase-client>2.4.11</hbase-client>
-		<disruptor>3.4.4</disruptor> 
-		<jackson-databind>2.13.2.2</jackson-databind> 
-		<commons-compress>1.21</commons-compress>
+		<hbase-client>2.4.11</hbase-client> 
+		<jackson-databind>2.13.2.2</jackson-databind>  
 		<xstream>1.4.19</xstream> 
+		<disruptor>3.4.4</disruptor> 
+		<commons-compress>1.21</commons-compress>
 		 
 		<!--   
 		<dom4j>2.1.3</dom4j>
@@ -363,6 +364,11 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba.fastjson2</groupId>
+				<artifactId>fastjson2</artifactId>
+				<version>${fastjson2}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents.client5</groupId>
