--- a/pom.xml
+++ b/pom.xml
@@ -3,50 +3,50 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>2.6</version>
+		<version>2.6.1</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.6.1</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.22.1</log4j-core>
-		<fastjson2>2.0.44</fastjson2> 
-		<hibernate-envers>6.4.1.Final</hibernate-envers> 
-		<netty-all>4.1.104.Final</netty-all>
+		<log4j-core>2.23.1</log4j-core>
+		<fastjson2>2.0.52</fastjson2> 
+		<hibernate-envers>6.5.2.Final</hibernate-envers> 
+		<netty-all>4.1.112.Final</netty-all>
 		<mongo-java-driver>3.12.14</mongo-java-driver>
 		<influxdb-java>2.24</influxdb-java>
-		<flink-java>1.18.0</flink-java>
-		<jedis>5.1.0</jedis>
-		<jsoup>1.17.2</jsoup> 
+		<flink-java>1.19.1</flink-java>
+		<jedis>5.1.3</jedis>
+		<jsoup>1.18.1</jsoup> 
 		<seata>2.0.0</seata>
-		<kafka-clients>3.6.1</kafka-clients>
-		<sofa-rpc>5.11.1</sofa-rpc>
-		<guava>33.0.0-jre</guava>
-		<elasticsearch-java>8.11.2</elasticsearch-java>
-		<poi>5.2.5</poi>
-		<tomcat-embed>10.1.17</tomcat-embed>
-		<nacos-client>2.3.0</nacos-client>
-		<hadoop-client>3.3.6</hadoop-client>
-		<protobuf-java>3.25.1</protobuf-java>
-		<httpclient5>5.3</httpclient5>
+		<kafka-clients>3.7.1</kafka-clients>
+		<sofa-rpc>5.13.0</sofa-rpc>
+		<guava>33.2.1-jre</guava>
+		<elasticsearch-java>8.14.3</elasticsearch-java>
+		<poi>5.3.0</poi>
+		<tomcat-embed>10.1.26</tomcat-embed>
+		<nacos-client>2.4.0</nacos-client>
+		<hadoop-client>3.4.0</hadoop-client>
+		<protobuf-java>4.27.2</protobuf-java>
+		<httpclient5>5.3.1</httpclient5>
 		<okhttp>4.12.0</okhttp> 
 		<HikariCP>5.1.0</HikariCP>
-		<solr-solrj>9.4.0</solr-solrj>
+		<solr-solrj>9.6.1</solr-solrj>
 		<snakeyaml>2.2</snakeyaml>
 		<opencsv>5.9</opencsv>
-		<druid>1.2.20</druid>
-		<shiro>1.13.0</shiro>
-		<curator-framework>5.5.0</curator-framework>
-		<hbase-client>2.5.7</hbase-client>
-		<jackson-databind>2.16.1</jackson-databind> 
-		<disruptor>4.0.0</disruptor> 
-		<commons-compress>1.25.0</commons-compress>
-		<aparapi>3.0.0</aparapi>
+		<druid>1.2.23</druid>
+		<shiro>2.0.1</shiro><!-- 1.13.0 -->
+		<curator-framework>5.7.0</curator-framework>
+		<hbase-client>2.6.0</hbase-client>
+		<jackson-databind>2.17.2</jackson-databind> 
+		<disruptor>3.4.4</disruptor> <!--4.0.0-->
+		<commons-compress>1.26.2</commons-compress>
+		<aparapi>3.0.2</aparapi>
 		<mysql-connector-java>8.0.33</mysql-connector-java>
 		<hibernate-core>5.6.15.Final</hibernate-core>
 		<xstream>1.4.20</xstream>
-		<retrofit>2.10.6</retrofit>
+		<retrofit>2.11.0</retrofit>
 
 		<!--    
 		<retrofit>2.10.6</retrofit>
@@ -405,7 +405,7 @@
 				<version>${okhttp}</version>
 			</dependency>
 			<dependency>
-				<groupId>io.github.zawn.retrofit2</groupId>
+				<groupId>com.squareup.retrofit2</groupId>
 				<artifactId>retrofit</artifactId>
 				<version>${retrofit}</version>
 			</dependency>
